# logline-os

./: .env.example  .gitignore  .vercelignore  LLM_KEYS_HOW_IT_WORKS.md  MIGRATION_CONSOLIDATION.md  PHASE6_POWER_TOOLS.md  README.md  enable-pgvector.sql  package-lock.json  package.json  vercel.json
api/: api.rs  commands.rs  config__2.rs  config__3.rs  discovery.rs  errors.rs  federation_commands.rs  health.rs  index.ts  lib.rs  lib__3.rs  lib__6.rs  main.rs  main__2.rs  main__3.rs  main__4.rs  mod__3.rs  network.rs  onboarding.rs  onboarding__2.rs  peer.rs  resilience.rs  rest_routes.rs  routing.rs  rules_client.rs  security.rs  websocket.rs  ws_client.rs  ws_client__2.rs  ws_routes.rs
auth/: identity.rs  identity_commands.rs
docs/: 002_implement_multi_tenant_infrastructure.sql  Dockerfile  ID_REFACTORING_PLAN.md  README.md  ROADMAP.md  TASKLIST.md  api-gateway.md  architecture.md  benchmarking.md  deployment-checklist.md  docker-compose.yml  enforcement-implementado.md  enforcement-readme.md  envelope.md  error-handling.md  github-push-guide.md  id-integration-examples.md  id-refactoring-details.md  index.md  lifecycle.md  logline-id-README.md  logline-id-service.md  logline-timeline-README.md  modularization-plan.md  multi-tenant-timeline.md  naming-conventions.md  overview.md  projeto-logline.md  railway-deployment.md  reconnect.md  rest.md  standardize-filenames.sh  structure.md  testing.md  timeline-integration-summary.md  vision.md  websocket.md
ledger/: 001_create_timeline_spans.sql  003_multi_tenant_timeline_integration.sql  condition.rs  db.rs  entry.rs  lib__4.rs  lib__5.rs  mod.rs  mod__2.rs  mod__2__2.rs  query.rs  repository.rs  rule.rs  span.rs  spans_commands.rs  stats.rs  sync.rs  timeline_commands.rs
ops/: Cargo.toml  Cargo__2.toml  Cargo__3.toml  Cargo__4.toml  Cargo__5.toml  Cargo__6.toml  Cargo__7.toml  Cargo__8.toml  Makefile  RAILWAY_MANUAL_SETUP.md  build.sh  cleanup_legacy.sh  dev-hybrid.sh  railway_api_setup.sh  railway_deploy.sh  run_migrations.sh  setup_railway_database.sh
runtime/: action.rs  config.rs  engine.rs  error.rs  error__2.rs  errors__2.rs  lib__2.rs  loader.rs  logging.rs  outcome.rs  runtime.rs  scheduler.rs  (+6 more)
tests/: Cargo.toml  engine_rules_ws.rs  engine_timeline_ws.rs  envelope.rs  error_propagation.rs  fallback_rest.rs  full_roundtrip.rs  fuzz_envelope.rs  gateway.rs  health.rs  reconnect.rs  routing.rs  schema_validation.rs  ws_vs_rest.rs
(+264 files in other folders)
