[package]
name = "logline"
version = "0.1.0"
edition = "2021"
authors = ["LogLine Team"]
description = "Sistema de registro distribuído para instituições computacionais"
license = "MIT"
repository = "https://github.com/logline/logline"

[workspace]
members = [
    "logline-core",
    "logline-protocol",
    "logline-id",
    "logline-timeline",
    "logline-rules",
    "logline-engine",
    "logline-gateway",
]
[dependencies]
# Principais dependências
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Criptografia
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
rpassword = "7.3"
colored = "2.1"

# Armazenamento
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "json"] }
rusqlite = { version = "0.30", features = ["bundled"] }

# Rede
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Utilidades
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
regex = "1.10"
dirs = "5.0"
base64 = "0.21"
hex = "0.4"
dotenvy = "0.15"
logline-core = { path = "logline-core" }
logline-protocol = { path = "logline-protocol" }

[dev-dependencies]
mockall = "0.12"
test-case = "3.3"
tempfile = "3.9"
wiremock = "0.5"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots", "connect"] }
logline-gateway = { path = "logline-gateway" }

[[bin]]
name = "logline"
path = "src/main.rs"


[[bench]]
name = "ws_vs_rest"
path = "tests/benchmarks/ws_vs_rest.rs"
harness = false
