[package]
name = "logline-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
axum = "0.7"
serde_json = "1.0"
logline-core = { path = "../logline-core" }

[[bin]]
name = "fuzz_envelope"
path = "fuzz_targets/fuzz_envelope.rs"
test = false
doc = false
bench = false
